# PySysML2

./: pyproject.toml
pysysml2/grammar/: SysML2.g4  sysml2_model_visitor.py
pysysml2/grammar/distpy/: SysML2.interp  SysML2Lexer.interp  SysML2Lexer.py  SysML2Lexer.tokens  SysML2Listener.py  SysML2Parser.py  SysML2Visitor.py
pysysml2/modeling/: element.py  model.py
tests/: utils.py
